<?xml version="1.0"?>
<package>
  <name>my_slam_gmapping</name>
  <version>0.0.0</version>
  <description>The my_slam_gmapping package</description>
  <maintainer email="cwh@todo.todo">cwh</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>std_msgs</run_depend>
  
  <export>
  </export>
</package>
